# routes/api.php
@@ -37,6 +37,8 @@ Route::prefix('v1')->group(function () {
 
     });
 
+    Route::post('/place-evaluation-by-place-coords', [PlaceEvaluationController::class, 'placeEvaluationByPlaceCoords']);
+
     Route::get('/legal-text/{type}', [LegalTextController::class, 'getLegalText']);
     Route::get('/faqs', [FaqController::class, 'getFaqs']);
 });
