# storage/api-docs/api-docs.json
@@ -555,6 +555,64 @@
                     }
                 }
             }
+        },
+        "/place-evaluation-by-place-coords": {
+            "post": {
+                "tags": [
+                    "PlaceEvaluation"
+                ],
+                "summary": "filter for evaluations for the given coords, place",
+                "description": "filter for evaluations for the given coords, place",
+                "operationId": "placeEvaluationByPlaceCoords",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/requestPlaceEvaluationByPlaceCoordsObject"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "headers": {
+                            "X-Rate-Limit": {
+                                "description": "calls per hour allowed by the user",
+                                "schema": {
+                                    "type": "integer",
+                                    "format": "int32"
+                                }
+                            },
+                            "X-Expires-After": {
+                                "description": "date in UTC when token expires",
+                                "schema": {
+                                    "type": "string",
+                                    "format": "datetime"
+                                }
+                            }
+                        },
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Invalid username/password supplied"
+                    },
+                    "400": {
+                        "description": "Internal error"
+                    }
+                },
+                "security": [
+                    {
+                        "api_key_security": []
+                    }
+                ]
+            }
         }
     },
     "components": {
@@ -595,6 +653,23 @@
                 "properties": {
                     "email": {
                         "format": "email"
+                    }
+                },
+                "type": "object"
+            },
+            "requestPlaceEvaluationByPlaceCoordsObject": {
+                "properties": {
+                    "latitude": {
+                        "title": "Coord. Latitude",
+                        "description": "Coord. Latitude",
+                        "format": "decimal",
+                        "example": ""
+                    },
+                    "longitude": {
+                        "title": "Coord. Longitude",
+                        "description": "Coord. Longitude",
+                        "format": "decimal",
+                        "example": ""
                     }
                 },
                 "type": "object"
